--- a/NKKDotNetCore.RestApi/NKKDotNetCore.RestApi.csproj
+++ b/NKKDotNetCore.RestApi/NKKDotNetCore.RestApi.csproj
@@ -15,4 +15,8 @@
 		<PackageReference Include="Dapper" Version="2.1.35" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\NKKDotNetCore.Shared\NKKDotNetCore.Shared.csproj" />
+	</ItemGroup>
+
 </Project>
