--- a/NKKDotNetCore.PizzaApi/NKKDotNetCore.PizzaApi.csproj
+++ b/NKKDotNetCore.PizzaApi/NKKDotNetCore.PizzaApi.csproj
@@ -14,4 +14,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\NKKDotNetCore.Shared\NKKDotNetCore.Shared.csproj" />
+	</ItemGroup>
+
 </Project>
