--- a/NKKDotNetCore.WinFormsAppSqlInjection/NKKDotNetCore.WinFormsAppSqlInjection.csproj
+++ b/NKKDotNetCore.WinFormsAppSqlInjection/NKKDotNetCore.WinFormsAppSqlInjection.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NKKDotNetCore.Shared\NKKDotNetCore.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
